Added Test Projects

--- a/FiledTest.API.UnitTests/FiledTest.API.UnitTests.csproj
+++ b/FiledTest.API.UnitTests/FiledTest.API.UnitTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FiledTest.API\FiledTest.API.csproj" />
+  </ItemGroup>
+
 </Project>
